--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-stl-viewer": "^2.5.0",
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
+    "three": "^0.171.0",
+    "three-stdlib": "^2.35.2",
     "typescript": "5.3.3"
   }
 }
